yaml-examples/couchpotato/couchpotato-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: couchpotato
  namespace: default
  labels:
    app: couchpotato
spec:
  replicas: 1
  selector:
    matchLabels:
      app: couchpotato
  template:
    metadata:
      labels:
        app: couchpotato
    spec:

      containers:
      - name: couchpotato
        image: linuxserver/couchpotato
        imagePullPolicy: Always
        ports:
          - containerPort: 5050
        volumeMounts:
          - mountPath: /config
            name: config
          - mountPath: /downloads
            name: downloads
          - mountPath: /movies
            name: movies
      volumes:
      -  name: config
         persistentVolumeClaim:
          claimName: couchpotato
      - name: downloads
        hostPath:
          path: /mnt/share/Downloads
      - name: movies
        hostPath:
          path: /mnt/share/Movies
