yaml-examples/couchpotato/couchpotato-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: couchpotato
  namespace: default
spec:
  rules:
  - host: couchpotato.lan
    http:
      paths:
      - backend:
          service:
            name: couchpotato
            port:
              number: 5050
        path: /
        pathType: ImplementationSpecific
